janet-check/src/analysis/peg/snapshots/janet_check__analysis__peg__tests__grammar_defined_then_passed_by_name.snap
---
source: src/analysis/peg/tests.rs
expression: "(def grammar ~{:main (some :d)})\n(def data '(some \"a\"))\n(peg/match grammar s)"
---
----- SOURCE CODE
(def grammar ~{:main (some :d)})
(def data '(some "a"))
(peg/match grammar s)

----- PEG SPECIALS
(def grammar ~{:main (some :d)})
                      ▔▔▔▔
(def data '(some "a"))
(peg/match grammar s)
