janet-check/src/analysis/peg/snapshots/janet_check__analysis__peg__tests__grammar_struct_with_aliases.snap
---
source: src/analysis/peg/tests.rs
assertion_line: 36
expression: "(peg/find ~{:main (* (<- :d) (? \"-\") (quote :w))} s)"
---
----- SOURCE CODE
(peg/find ~{:main (* (<- :d) (? "-") (quote :w))} s)

----- PEG SPECIALS
(peg/find ~{:main (* (<- :d) (? "-") (quote :w))} s)
                   ▔  ▔▔      ▔       ▔▔▔▔▔
