janet-check/src/analysis/peg/snapshots/janet_check__analysis__peg__tests__quasiquoted_pattern.snap
---
source: src/analysis/peg/tests.rs
assertion_line: 26
expression: (peg/compile ~(some (constant 1)))
---
----- SOURCE CODE
(peg/compile ~(some (constant 1)))

----- PEG SPECIALS
(peg/compile ~(some (constant 1)))
               ▔▔▔▔  ▔▔▔▔▔▔▔▔
