janet-check/src/analysis/peg/snapshots/janet_check__analysis__peg__tests__quoted_data_outside_a_peg_call.snap
---
source: src/analysis/peg/tests.rs
assertion_line: 56
expression: "(def g '(some \"a\"))\n(some odd? xs)"
---
----- SOURCE CODE
(def g '(some "a"))
(some odd? xs)

----- PEG SPECIALS
(def g '(some "a"))
(some odd? xs)
