janet-check/src/analysis/peg/snapshots/janet_check__analysis__peg__tests__quoted_pattern.snap
---
source: src/analysis/peg/tests.rs
assertion_line: 31
expression: "(peg/match '(any (set \"ab\")) \"abba\")"
---
----- SOURCE CODE
(peg/match '(any (set "ab")) "abba")

----- PEG SPECIALS
(peg/match '(any (set "ab")) "abba")
             ▔▔▔  ▔▔▔
