janet-check/src/analysis/peg/snapshots/janet_check__analysis__peg__tests__unquoted_code_in_a_pattern.snap
---
source: src/analysis/peg/tests.rs
assertion_line: 46
expression: "(peg/match ~(sequence ,(some odd? xs) (if :d 1)) s)"
---
----- SOURCE CODE
(peg/match ~(sequence ,(some odd? xs) (if :d 1)) s)

----- PEG SPECIALS
(peg/match ~(sequence ,(some odd? xs) (if :d 1)) s)
             ▔▔▔▔▔▔▔▔                  ▔▔
