janet-check/src/analysis/peg/snapshots/janet_check__analysis__peg__tests__unquoted_struct_with_quoted_rules.snap
---
source: src/analysis/peg/tests.rs
assertion_line: 41
expression: "(peg/match {:main '(some \"a\")} s)"
---
----- SOURCE CODE
(peg/match {:main '(some "a")} s)

----- PEG SPECIALS
(peg/match {:main '(some "a")} s)
                    ▔▔▔▔
